--- a/src/components/features/PostList/PostList.module.scss
+++ b/src/components/features/PostList/PostList.module.scss
@@ -1,8 +1,30 @@
-@import '../../../styles/settings.scss';
+@import "../../../styles/settings.scss";
 
 .productDescription {
-    color: rgb(212, 218, 247);
-    margin-left: 48px;
-    font-size: 24px;
-    
+  margin-top: 96px;
+}
+
+img {
+  width: 500px;
+  height: 500px;
+  margin: 0 60px 60px 360px;
+  border: solid 1px white;
+  max-width: 100%;
+  height: auto;
+  &:hover {
+    box-shadow: 0 0 0.8em rgb(255, 255, 255);
+  }
+}
+
+.product {
+  color: rgb(180, 188, 231);
+  margin-left: 48px;
+  font-size: 24px;
+  display: inline-flex;
+  font-family: $font-text;
+  &:hover {
+    text-decoration: none;
+    color: white;
+    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+  }
 }
