--- a/src/components/views/Homepage/Homepage.module.scss
+++ b/src/components/views/Homepage/Homepage.module.scss
@@ -10,139 +10,15 @@
   height: 100%;
 }
 
-.circles {
-  top: 0;
-  left: 0;
+.background {
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  opacity: 0.7;
-}
-
-.circles li {
-  position: absolute;
-  display: block;
-  list-style: none;
-  animation: animate 25s linear infinite;
-  bottom: 10px;
-}
-
-.circles li:nth-child(1) {
-  left: 25%;
-  width: 40px;
-  height: 40px;
-  animation-delay: 0s;
-  animation-duration: 15s;
-  background-image: url("https://i.postimg.cc/282g05rK/obrot-mineralu-01.jpg");
-  background-size: cover;
-}
-
-.circles li:nth-child(2) {
-  left: 35%;
-  width: 20px;
-  height: 20px;
-  animation-delay: 0s;
-  animation-duration: 12s;
-  background-image: url("https://i.postimg.cc/2yCXxsJY/obrot-mineralu-02.jpg");
-  background-size: cover;
-}
-
-.circles li:nth-child(3) {
-  left: 70%;
-  width: 20px;
-  height: 20px;
-  animation-delay: 0s;
-  background-image: url("https://i.postimg.cc/MGDBQgyV/obrot-mineralu-03.jpg");
-  background-size: cover;
-}
-
-.circles li:nth-child(4) {
-  left: 40%;
-  width: 40px;
-  height: 40px;
-  animation-delay: 0s;
-  animation-duration: 18s;
-  background-image: url("https://i.postimg.cc/tJ1n8T8N/obrot-mineralu-04.jpg");
-  background-size: cover;
-}
-
-.circles li:nth-child(5) {
-  left: 65%;
-  width: 20px;
-  height: 20px;
-  animation-delay: 0s;
-  animation-duration: 13s;
-  background-image: url("https://i.postimg.cc/dQXyr2TH/obrot-mineralu-05.jpg");
-  background-size: cover;
-}
-
-.circles li:nth-child(6) {
-  left: 75%;
-  width: 40px;
-  height: 40px;
-  animation-delay: 0s;
-  animation-duration: 15s;
-  background-image: url("https://i.postimg.cc/26y1ByjN/obrot-mineralu-06.jpg");
-  background-size: cover;
-}
-
-.circles li:nth-child(7) {
-  left: 10%;
-  width: 40px;
-  height: 40px;
-  animation-delay: 0s;
-  background-image: url("https://i.postimg.cc/VNGjh3d1/obrot-mineralu-07.jpg");
-  background-size: cover;
-}
-
-.circles li:nth-child(8) {
-  left: 50%;
-  width: 25px;
-  height: 25px;
-  animation-delay: 0s;
-  animation-duration: 45s;
-  background-image: url("https://i.postimg.cc/kXbfbXDS/obrot-mineralu-08.jpg");
-  background-size: cover;
-}
-
-.circles li:nth-child(9) {
-  left: 20%;
-  width: 15px;
-  height: 15px;
-  animation-delay: 0s;
-  animation-duration: 13s;
-  background-image: url("https://i.postimg.cc/ZqVcSWsG/obrot-mineralu-09.jpg");
-  background-size: cover;
-}
-
-.circles li:nth-child(10) {
-  left: 85%;
-  width: 40px;
-  height: 40px;
-  background-image: url("https://i.postimg.cc/NjxVKfP4/obrot-mineralu-10.jpg");
-  background-size: cover;
-  animation-delay: 0s;
-  animation-duration: 11s;
-}
-
-@keyframes animate {
-  0% {
-    transform: translateY(0) rotate(0deg);
-    opacity: 0.7;
-    border-radius: 0;
-  }
-
-  100% {
-    transform: translateY(-1000px) rotate(720deg);
-    opacity: 0;
-    border-radius: 80%;
-  }
 }
 
 .title {
-  color: rgb(0, 0, 36);
+  color: rgb(255, 255, 255);
   opacity: 0.7;
-  text-shadow: 1px 1px 1px black, 0 0 25px rgb(165, 179, 255), 0 0 25px darkblue;
+  text-shadow: 1px 1px 1px rgb(255, 255, 255), 0 0 25px rgb(92, 113, 233), 0 0 25px rgb(255, 255, 255);
   text-align: center;
   font-family: $font-text;
   font-size: 160px;
@@ -153,9 +29,9 @@
 }
 
 .subtitle {
-  color: rgb(0, 0, 36);
+  color: rgb(255, 255, 255);
   opacity: 0.7;
-  text-shadow: 1px 1px 1px black, 0 0 25px rgb(165, 179, 255), 0 0 25px darkblue;
+  text-shadow: 1px 1px 1px rgb(255, 255, 255), 0 0 25px rgb(92, 113, 233), 0 0 25px rgb(255, 255, 255);
   font-family: $font-text;
   font-size: 72px;
   position: absolute;
@@ -175,8 +51,6 @@
 .posts {
   font-size: 24px;
   padding: 24px 0 48px 0;
-  background: black
-    url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/stars.png) repeat;
   top: 840px;
   left: 0;
   right: 0;
