--- a/src/components/features/PostList/PostList.module.scss
+++ b/src/components/features/PostList/PostList.module.scss
@@ -8,12 +8,12 @@ img {
   width: 500px;
   height: 500px;
   margin: 90px 60px 60px 360px;
-  border: solid 1px rgb(0, 0, 0);
+  border: solid 1px $color-dark;
   padding: 1px;
   max-width: 100%;
   height: auto;
   &:hover {
-    box-shadow: 0 0 0.8em rgb(255, 255, 255);
+    box-shadow: 0 0 0.8em $color-light;
   }
 }
 
@@ -22,7 +22,7 @@ img {
 }
 
 .product {
-  color: rgb(0, 5, 31);
+  color: $color-darkblue;
   margin-left: 520px;
   margin-top: 36px;
   font-size: 24px;
@@ -30,8 +30,12 @@ img {
   font-family: $font-text;
   &:hover {
     text-decoration: none;
-    color: rgb(0, 5, 31);
+    color: $color-darkblue;
   }
+}
+
+.mineralNameContent, .mineralPriceContent {
+  color: $color-important;
 }
 
 .mineralName {
@@ -43,14 +47,14 @@ img {
   content: "";
   height: 1px;
   width: 35%;
-  background-image: linear-gradient(to right, rgb(255, 255, 255), rgb(0, 0, 0), rgb(255, 255, 255));
+  background-image: linear-gradient(to right, $color-light, $color-dark, $color-light);
 }
 
-.squares {
+.squaresLeftSided {
   margin-left: 20px;
 }
 
-.circles {
+.squares {
   top: 0px;
   left: 0;
   width: 100%;
@@ -58,93 +62,126 @@ img {
   overflow: hidden;
 }
 
-.circles li {
+.squares li {
   position: absolute;
   display: block;
   list-style: none;
   animation: animate 25s linear infinite;
+  animation-delay: 0s;
   bottom: 10px;
-  background-color: rgb(0, 0, 0);
+  background-color: $color-darkblue;
 }
 
-.circles li:nth-child(1) {
+.squares li:nth-child(1) {
   left: 7%;
-  width: 40px;
-  height: 40px;
-  animation-delay: 0s;
+  width: 30px;
+  height: 30px;
   animation-duration: 15s;
 }
 
-.circles li:nth-child(2) {
-  left: 9%;
+.squares li:nth-child(2) {
+  left: 8%;
   width: 20px;
   height: 20px;
-  animation-delay: 0s;
-  animation-duration: 17s;
-}
-
-.circles li:nth-child(3) {
-  left: 11%;
-  width: 20px;
-  height: 20px;
-  animation-delay: 0s;
   animation-duration: 19s;
 }
 
-.circles li:nth-child(4) {
-  left: 13%;
-  width: 40px;
-  height: 40px;
-  animation-delay: 0s;
-  animation-duration: 21s;
-}
-
-.circles li:nth-child(5) {
-  left: 15%;
-  width: 20px;
-  height: 20px;
-  animation-delay: 0s;
+.squares li:nth-child(3) {
+  left: 9%;
+  width: 16px;
+  height: 16px;
   animation-duration: 23s;
 }
 
-.circles li:nth-child(6) {
-  left: 17%;
-  width: 40px;
-  height: 40px;
-  animation-delay: 0s;
-  animation-duration: 25s;
-}
-
-.circles li:nth-child(7) {
-  left: 19%;
-  width: 40px;
-  height: 40px;
-  animation-delay: 0s;
+.squares li:nth-child(4) {
+  left: 10%;
+  width: 32px;
+  height: 32px;
   animation-duration: 27s;
 }
 
-.circles li:nth-child(8) {
-  left: 21%;
-  width: 25px;
-  height: 25px;
-  animation-delay: 0s;
-  animation-duration: 29s;
+.squares li:nth-child(5) {
+  left: 11%;
+  width: 22px;
+  height: 22px;
+  animation-duration: 31s;
 }
 
-.circles li:nth-child(9) {
-  left: 23%;
+.squares li:nth-child(6) {
+  left: 12%;
+  width: 14px;
+  height: 14px;
+  animation-duration: 17s;
+}
+
+.squares li:nth-child(7) {
+  left: 13%;
+  width: 26px;
+  height: 26px;
+  animation-duration: 21s;
+}
+
+.squares li:nth-child(8) {
+  left: 14%;
+  width: 24px;
+  height: 24px;
+  animation-duration: 25s;
+}
+
+.squares li:nth-child(9) {
+  left: 15%;
   width: 15px;
   height: 15px;
-  animation-delay: 0s;
   animation-duration: 26s;
 }
 
-.circles li:nth-child(10) {
-  left: 25%;
-  width: 40px;
-  height: 40px;
-  animation-delay: 0s;
+.squares li:nth-child(10) {
+  left: 16%;
+  width: 20px;
+  height: 20px;
   animation-duration: 16s;
+}
+
+.squares li:nth-child(11) {
+  left: 17%;
+  width: 20px;
+  height: 20px;
+  animation-duration: 18s;
+}
+
+.squares li:nth-child(12) {
+  left: 18%;
+  width: 26px;
+  height: 26px;
+  animation-duration: 22s;
+}
+
+.squares li:nth-child(13) {
+  left: 19%;
+  width: 26px;
+  height: 26px;
+  animation-duration: 26s;
+}
+
+.squares li:nth-child(14) {
+  left: 20%;
+  width: 16px;
+  height: 16px;
+  animation-duration: 24s;
+}
+
+.squares li:nth-child(15) {
+  left: 21%;
+  width: 12px;
+  height: 12px;
+  animation-duration: 20s;
+}
+
+.squares li:nth-child(16) {
+  left: 22%;
+  width: 10px;
+  height: 10px;
+  animation-duration: 14s;
 }
 
 @keyframes animate {
@@ -155,7 +192,7 @@ img {
   }
 
   100% {
-    transform: translateY(-3340px) rotate(720deg);
+    transform: translateY(-3352px) rotate(720deg);
     opacity: 0.9;
     border-radius: 0;
   }
