--- a/src/components/views/Homepage/Homepage.module.scss
+++ b/src/components/views/Homepage/Homepage.module.scss
@@ -16,27 +16,27 @@
 }
 
 .title {
-  color: rgb(255, 255, 255);
+  color: $color-light;
   opacity: 0.7;
-  text-shadow: 1px 1px 1px rgb(255, 255, 255), 0 0 25px rgb(92, 113, 233), 0 0 25px rgb(255, 255, 255);
+  text-shadow: 1px 1px 1px $color-light, 0 0 25px $color-blue, 0 0 25px $color-light;
   text-align: center;
   font-family: $font-text;
   font-size: 160px;
   font-weight: 400;
   padding: 96px 0 0 0;
   letter-spacing: 16px;
-  margin-top: -800px;
+  margin-top: -780px;
 }
 
 .subtitle {
-  color: rgb(255, 255, 255);
+  color: $color-light;
   opacity: 0.7;
-  text-shadow: 1px 1px 1px rgb(255, 255, 255), 0 0 25px rgb(92, 113, 233), 0 0 25px rgb(255, 255, 255);
+  text-shadow: 1px 1px 1px $color-light, 0 0 25px $color-blue, 0 0 25px $color-light;
   font-family: $font-text;
   font-size: 72px;
   position: absolute;
   bottom: 0;
-  margin: 0 0 24px 580px;
+  margin: 0 0 24px 440px;
 
   .subtitleText {
     text-align: center;
