--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,2 +1,11 @@
 $base-size: 12px;
 $font-text: 'Quicksand', sans-serif;
+
+$color-dark: rgb(0, 0, 0);
+$color-darkblue: rgb(0, 0, 27);
+$color-navyblue: rgb(0, 0, 82);
+$color-blue: #443ad4;
+$color-lightblue: #e6ebff;
+$color-light: rgb(255, 255, 255);
+$color-lightgrey: rgb(233, 233, 233);
+$color-important:  rgb(158, 25, 158);
