--- a/src/components/views/Homepage/Homepage.module.scss
+++ b/src/components/views/Homepage/Homepage.module.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/settings.scss";
 
 .root {
-  height: 732px;
+  height: 832px;
 }
 
 .allHomepage {
@@ -35,8 +35,7 @@
   font-family: $font-text;
   font-size: 72px;
   position: absolute;
-  bottom: 0;
-  margin: 0 0 24px 440px;
+  margin: 320px 0 24px 480px;
 
   .subtitleText {
     text-align: center;
@@ -50,7 +49,7 @@
 
 .posts {
   font-size: 24px;
-  padding: 24px 0 48px 0;
+  padding: 160px 0 48px 0;
   top: 840px;
   left: 0;
   right: 0;
