--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -9,3 +9,4 @@ $color-lightblue: #e6ebff;
 $color-light: rgb(255, 255, 255);
 $color-lightgrey: rgb(233, 233, 233);
 $color-important:  rgb(158, 25, 158);
+$color-importantDark:  rgb(90, 10, 90);
