--- a/src/components/features/PostList/PostList.module.scss
+++ b/src/components/features/PostList/PostList.module.scss
@@ -11,7 +11,6 @@ img {
   padding: 1px;
   max-width: 100%;
   height: auto;
-  box-shadow: 0 0px 6px $color-blue;
   transition: transform .2s;
   &:hover {
     transform: scale(1.2); 
@@ -22,7 +21,7 @@ img {
   margin: 90px 60px 60px 360px;
   transition: box-shadow 0.4s ease-in-out;
   &:hover img {
-    box-shadow: 0 0px 30px $color-blue; 
+    box-shadow: 0 0px 10px $color-navyblue; 
   }
 }
 
@@ -216,7 +215,7 @@ img {
   }
 
   100% {
-    transform: translateY(-3380px) rotate(720deg);
+    transform: translateY(-3376px) rotate(720deg);
     opacity: 0.9;
     border-radius: 0;
   }
