--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/settings.scss";
 
 .main {
-  background: linear-gradient(-45deg, $color-blue, $color-darkblue, $color-darkblue, $color-blue);
+  background: linear-gradient(-45deg, $color-importantDark, $color-darkblue, $color-darkblue, $color-importantDark);
 	background-size: 400% 400%;
 	animation: gradient 8s ease infinite;
   padding: 32px 0;
