--- a/src/components/views/Post/Post.module.scss
+++ b/src/components/views/Post/Post.module.scss
@@ -47,19 +47,74 @@
 
 .detailPhoto {
   display: inline-flex;
-  margin-left: 180px;
+  margin-left: 240px;
+  color: $color-navyblue;
   img {
     margin: 0 80px;
     width: 300px;
-    &:hover img{
-      box-shadow: 0 0px 30px $color-blue;
+    &:hover {
+      transform: scale(1.6);
+      box-shadow: 0 0px 10px $color-importantDark;
     }
+  }
+  h2 {
+    padding: 32px 0 24px 0;
+    text-align: center;
   }
 }
 
 .postDetailPrice {
-  padding: 24px 0;
   text-align: center;
+}
+
+.selectQuantity {
+  padding: 48px 0 0 0;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.plusAndMinus {
+  display: inline-flex;
+  padding: 24px 0 0 0;
+  margin-bottom: 24px;
+}
+
+.minus, .plus {
+  margin: 0 8px;
+  color: $color-light;
+  background-color: $color-navyblue;
+  height: 40px;
+  width: 40px;
+  border-radius: 15%;
+  &:hover {
+    box-shadow: 0 0px 10px $color-navyblue;
+  }
+}
+
+.totalPrice {
+  margin: 0 0 12px 0;
+}
+
+.addToChart {
+  color: $color-light;
+  background-color: $color-navyblue;
+  padding: 12px 8px;
+  border-radius: 3%;
+    &:hover {
+      color: $color-lightblue;
+      text-decoration: none;
+      box-shadow: 0 0px 10px $color-navyblue;
+    }
+}
+
+.amount {
+  margin: 0 8px;
+  color: $color-navyblue;
+  background-color: $color-light;
+  height: 40px;
+  width: 40px;
+  border: solid 1px $color-navyblue;
 }
 
 .background {
@@ -73,7 +128,7 @@
   z-index: 1;
 }
 
-.squares{
+.squares {
   position: absolute;
   top: 80px;
   left: 0;
@@ -82,7 +137,7 @@
   overflow: hidden;
 }
 
-.squares li{
+.squares li {
   position: absolute;
   display: block;
   list-style: none;
@@ -93,14 +148,14 @@
   bottom: -150px;
 }
 
-.squares li:nth-child(1){
+.squares li:nth-child(1) {
   left: 25%;
   width: 80px;
   height: 80px;
   animation-delay: 0s;
 }
 
-.squares li:nth-child(2){
+.squares li:nth-child(2) {
   left: 10%;
   width: 20px;
   height: 20px;
@@ -108,14 +163,14 @@
   animation-duration: 12s;
 }
 
-.squares li:nth-child(3){
+.squares li:nth-child(3) {
   left: 70%;
   width: 20px;
   height: 20px;
   animation-delay: 4s;
 }
 
-.squares li:nth-child(4){
+.squares li:nth-child(4) {
   left: 40%;
   width: 60px;
   height: 60px;
@@ -123,28 +178,28 @@
   animation-duration: 18s;
 }
 
-.squares li:nth-child(5){
+.squares li:nth-child(5) {
   left: 65%;
   width: 20px;
   height: 20px;
   animation-delay: 0s;
 }
 
-.squares li:nth-child(6){
+.squares li:nth-child(6) {
   left: 75%;
   width: 60px;
   height: 60px;
   animation-delay: 3s;
 }
 
-.squares li:nth-child(7){
+.squares li:nth-child(7) {
   left: 35%;
   width: 70px;
   height: 70px;
   animation-delay: 7s;
 }
 
-.squares li:nth-child(8){
+.squares li:nth-child(8) {
   left: 50%;
   width: 25px;
   height: 25px;
@@ -152,7 +207,7 @@
   animation-duration: 45s;
 }
 
-.squares li:nth-child(9){
+.squares li:nth-child(9) {
   left: 20%;
   width: 15px;
   height: 15px;
@@ -160,7 +215,7 @@
   animation-duration: 35s;
 }
 
-.squares li:nth-child(10){
+.squares li:nth-child(10) {
   left: 85%;
   width: 80px;
   height: 80px;
@@ -169,14 +224,13 @@
 }
 
 @keyframes animate {
-
-  0%{
-      transform: translateY(0) rotate(0deg);
-      opacity: 0.5;
+  0% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 0.5;
   }
 
-  100%{
-      transform: translateY(-1600px) rotate(720deg);
-      opacity: 0;
+  100% {
+    transform: translateY(-1600px) rotate(720deg);
+    opacity: 0;
   }
 }
