Homepage and product site styled

--- a/src/components/features/PostList/PostList.module.scss
+++ b/src/components/features/PostList/PostList.module.scss
@@ -5,20 +5,18 @@
 }
 
 img {
-  width: 500px;
-  height: 500px;
+  width: 300px;
   border: solid 1px $color-dark;
   padding: 1px;
-  max-width: 100%;
   height: auto;
   transition: transform .2s;
   &:hover {
-    transform: scale(1.2); 
+    transform: scale(1.1); 
   }
 }
 
 .photoInside {
-  margin: 90px 60px 60px 360px;
+  margin: 24px 60px 24px 90px;
   transition: box-shadow 0.4s ease-in-out;
   &:hover img {
     box-shadow: 0 0px 10px $color-navyblue; 
@@ -26,14 +24,13 @@ img {
 }
 
 .mineralText {
-  margin-top: 90px;
+  margin: 24px 0 0 48px;
 }
 
 .product {
   color: $color-darkblue;
   margin-left: 560px;
-  margin-top: 36px;
-  font-size: 32px;
+  font-size: 24px;
   display: inline-flex;
   font-family: $font-text;
   &:hover {
@@ -46,15 +43,12 @@ img {
   color: $color-important;
 }
 
-.mineralName {
-  margin-bottom: 48px;
-}
-
 .line {
+  margin-left: -200px;
   position: absolute;
   content: "";
   height: 1px;
-  width: 35%;
+  width: 55%;
   background-image: linear-gradient(to right, $color-light, $color-dark, $color-light);
 }
 
@@ -75,7 +69,7 @@ img {
   display: block;
   list-style: none;
   animation: animate 25s linear infinite;
-  animation-delay: 0s;
+  animation-delay: -2.5s;
   bottom: 10px;
 }
 
@@ -203,6 +197,134 @@ img {
   left: 22%;
   width: 10px;
   height: 10px;
+  animation-duration: 13.5s;
+  background-color: $color-importantDark;
+}
+
+.squares li:nth-child(17) {
+  left: 77%;
+  width: 26px;
+  height: 26px;
+  animation-duration: 14.5s;
+  background-color: $color-navyblue;
+}
+
+.squares li:nth-child(18) {
+  left: 78%;
+  width: 20px;
+  height: 20px;
+  animation-duration: 21s;
+  background-color: $color-blue;
+}
+
+.squares li:nth-child(19) {
+  left: 79%;
+  width: 16px;
+  height: 16px;
+  animation-duration: 20s;
+  background-color: $color-navyblue;
+}
+
+.squares li:nth-child(20) {
+  left: 80%;
+  width: 20px;
+  height: 20px;
+  animation-duration: 15s;
+  background-color: $color-navyblue;
+}
+
+.squares li:nth-child(21) {
+  left: 81%;
+  width: 30px;
+  height: 30px;
+  animation-duration: 18s;
+  background-color: $color-important;
+}
+
+.squares li:nth-child(22) {
+  left: 82%;
+  width: 24px;
+  height: 24px;
+  animation-duration: 21s;
+  background-color: $color-navyblue;
+}
+
+.squares li:nth-child(23) {
+  left: 83%;
+  width: 20px;
+  height: 20px;
+  animation-duration: 26s;
+  background-color: $color-navyblue;
+}
+
+.squares li:nth-child(24) {
+  left: 84%;
+  width: 12px;
+  height: 12px;
+  animation-duration: 22s;
+  background-color: $color-blue;
+}
+
+.squares li:nth-child(25) {
+  left: 85%;
+  width: 15px;
+  height: 15px;
+  animation-duration: 23s;
+  background-color: $color-importantDark;
+}
+
+.squares li:nth-child(26) {
+  left: 86%;
+  width: 26px;
+  height: 26px;
+  animation-duration: 19s;
+  background-color: $color-blue;
+}
+
+.squares li:nth-child(27) {
+  left: 87%;
+  width: 16px;
+  height: 16px;
+  animation-duration: 20s;
+  background-color: $color-navyblue;
+}
+
+.squares li:nth-child(28) {
+  left: 88%;
+  width: 22px;
+  height: 22px;
+  animation-duration: 24s;
+  background-color: $color-navyblue;
+}
+
+.squares li:nth-child(29) {
+  left: 89%;
+  width: 32px;
+  height: 32px;
+  animation-duration: 27s;
+  background-color: $color-important;
+}
+
+.squares li:nth-child(30) {
+  left: 90%;
+  width: 26px;
+  height: 26px;
+  animation-duration: 22s;
+  background-color: $color-important;
+}
+
+.squares li:nth-child(31) {
+  left: 91%;
+  width: 10px;
+  height: 10px;
+  animation-duration: 17s;
+  background-color: $color-importantDark;
+}
+
+.squares li:nth-child(32) {
+  left: 92%;
+  width: 14px;
+  height: 14px;
   animation-duration: 14s;
   background-color: $color-importantDark;
 }
@@ -215,7 +337,7 @@ img {
   }
 
   100% {
-    transform: translateY(-3376px) rotate(720deg);
+    transform: translateY(-2848px) rotate(720deg);
     opacity: 0.9;
     border-radius: 0;
   }
