--- a/src/components/views/MyOrder/MyOrder.module.scss
+++ b/src/components/views/MyOrder/MyOrder.module.scss
@@ -5,6 +5,12 @@
   //background: rgb(183, 196, 255);
 }
 
+.colorForMoment {
+  background-color: lightgrey;
+  width: 1700px;
+  height: 300px;
+}
+
 .postAdd {
   color: rgb(82, 11, 214);
   font-size: 24px;
