--- a/src/components/views/Homepage/Homepage.module.scss
+++ b/src/components/views/Homepage/Homepage.module.scss
@@ -1,13 +1,9 @@
 @import "../../../styles/settings.scss";
 
-.root {
-  height: 832px;
-}
-
 .allHomepage {
   background-image: url("https://i.postimg.cc/QC3sCxPZ/geoda-Duza-Pasy.jpg");
   background-size: cover;
-  height: 100%;
+  height: 840px;
 }
 
 .background {
@@ -20,12 +16,12 @@
   opacity: 0.7;
   text-shadow: $color-lightblue 0 0 10px, $color-light 0 -1px 80px, $color-light 0 -3px 2px, $color-navyblue 0 30px 25px;
   text-align: center;
+  margin-top: -780px;
   font-family: $font-text;
   font-size: 188px;
   font-weight: bold;
   padding: 96px 0 0 0;
   letter-spacing: 16px;
-  margin-top: -780px;
   z-index: 1;
   position: relative;
   transition: text-shadow 0.3s ease-in-out;
@@ -44,7 +40,7 @@
   margin-top: 280px;
   letter-spacing: 16px;
   font-weight: bold;
-
+  
   .subtitleText {
     text-align: center;
   }
@@ -65,3 +61,52 @@
   position: absolute;
 }
 
+@media (max-width: 767px) { //sm
+
+  // .allHomepage {
+  //   padding-top: 360px;
+  // }
+  
+  // .title {
+  // font-size: 48px;
+  // margin-top: -400px;
+  // }
+
+  // .subtitle {
+  //   font-size: 22px;
+  //   margin-top: 80px;
+  //   letter-spacing: 8px;
+  //   font-weight: bold;
+  //   i {
+  //     font-size: 24px;
+  //     padding: 0 0 0 8px;
+  //   }
+  // }
+
+  // .allHomepage {
+  //   background-image: url("https://i.postimg.cc/02YKGnGt/geoda-Duza-Srodek.jpg");
+  // }
+}
+
+@media (max-width: 411px) { // pixel 2 xl
+  
+}
+
+@media (max-width: 568px) { // sm poziom
+  
+}
+
+@media (max-width: 768px) {   //iPad
+ 
+  
+}
+
+@media (max-width: 992px) { //lg
+  
+  
+}
+
+@media (max-width: 1200px) { //xl
+  
+  
+}
