--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,5 +1,6 @@
 $base-size: 12px;
 $font-text: 'Quicksand', sans-serif;
+$font-title: 'Krona One', sans-serif;
 
 $color-dark: rgb(0, 0, 0);
 $color-darkblue: rgb(0, 0, 27);
