--- a/src/components/views/Homepage/Homepage.module.scss
+++ b/src/components/views/Homepage/Homepage.module.scss
@@ -12,13 +12,13 @@
 }
 
 .title {
-  color: $color-darkblue;
+  color:$color-navyblue;
   opacity: 0.7;
   text-shadow: $color-lightblue 0 0 10px, $color-light 0 -1px 80px, $color-light 0 -3px 2px, $color-navyblue 0 30px 25px;
   text-align: center;
   margin-top: -780px;
-  font-family: $font-text;
-  font-size: 188px;
+  font-family: $font-title;
+  font-size: 132px;
   font-weight: bold;
   padding: 96px 0 0 0;
   letter-spacing: 16px;
@@ -37,7 +37,7 @@
   font-family: $font-text;
   font-size: 32px;
   text-align: center;
-  margin-top: 280px;
+  margin-top: 320px;
   letter-spacing: 16px;
   font-weight: bold;
   
