--- a/src/components/views/Post/Post.module.scss
+++ b/src/components/views/Post/Post.module.scss
@@ -19,21 +19,21 @@
   font-size: 72px;
   color: $color-important;
   text-align: center;
-  padding: 120px 0 84px 0;
+  padding: 120px 0 72px 0;
 }
 
 .detailText {
   font-size: 26px;
   color: $color-navyblue;
   text-align: center;
-  padding: 0 48px 96px 72px;
+  padding: 0 48px 60px 72px;
 }
 
 .photoDescription {
   font-size: 48px;
   color: $color-navyblue;
   text-align: center;
-  padding: 0 0 72px 0;
+  padding: 0 0 60px 0;
   letter-spacing: 6px;
 }
 
@@ -41,7 +41,7 @@
   font-size: 48px;
   color: $color-navyblue;
   text-align: center;
-  padding: 120px 0 72px 0;
+  padding: 80px 0 32px 0;
   letter-spacing: 6px;
 }
 
@@ -99,6 +99,11 @@
   font-size: 16px;
 }
 
+.addToChartContainer {
+  width: 35%;
+  margin-left: 148px;
+}
+
 .addToChart {
   color: $color-navyblue;
   background-color: $color-light;
@@ -106,6 +111,7 @@
   padding: 8px 12px;
   border-radius: 3%;
   font-size: 16px;
+  transition: box-shadow 0.2s ease-in-out;
     &:hover {
       text-decoration: none;
       color: $color-navyblue;
@@ -120,6 +126,42 @@
   height: 24px;
   width: 24px;
   border: solid 1px $color-navyblue;
+}
+
+.basketContainer {
+  position: relative;
+  height: 140px;
+}
+
+.basket {
+  position: absolute; 
+  top: 50%; left: 
+  50%; transform: translate(-50%, -50%);
+  margin-left: -32px;
+  background: linear-gradient(-45deg, $color-blue, $color-importantDark, $color-darkblue, $color-importantDark, $color-blue);
+	background-size: 200% 200%;
+	animation: gradient 8s ease infinite;
+  padding: 20px 48px;
+  color: $color-light;
+  border: solid 1px black;
+  transition: box-shadow 0.2s ease-in-out;
+    &:hover {
+      text-decoration: none;
+      color: $color-light;
+      box-shadow: 0 0px 10px $color-navyblue;
+    }
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
 .background {
