--- a/src/components/views/Post/Post.module.scss
+++ b/src/components/views/Post/Post.module.scss
@@ -5,6 +5,12 @@
   font-size: 24px;
 }
 
+.background {
+  background: $color-lightblue;
+  width: 100%;
+  height: 190vh;
+}
+
 .postDetail {
   display: inline-flex;
   width: 260px;
@@ -20,6 +26,9 @@
   color: $color-important;
   text-align: center;
   padding: 120px 0 72px 0;
+  &:hover {
+    color: $color-navyblue;
+  }
 }
 
 .detailText {
@@ -35,6 +44,9 @@
   text-align: center;
   padding: 0 0 60px 0;
   letter-spacing: 6px;
+  &:hover {
+    color: $color-important;
+  }
 }
 
 .photoDescription2 {
@@ -43,6 +55,9 @@
   text-align: center;
   padding: 80px 0 32px 0;
   letter-spacing: 6px;
+  &:hover {
+    color: $color-important;
+  }
 }
 
 .detailPhoto {
@@ -133,7 +148,7 @@
   height: 140px;
 }
 
-.basket {
+.goToBasket {
   position: absolute; 
   top: 50%; left: 
   50%; transform: translate(-50%, -50%);
@@ -144,10 +159,11 @@
   padding: 20px 48px;
   color: $color-light;
   border: solid 1px black;
-  transition: box-shadow 0.2s ease-in-out;
+  text-transform: uppercase;
     &:hover {
       text-decoration: none;
       color: $color-light;
+      font-weight: bold;
       box-shadow: 0 0px 10px $color-navyblue;
     }
 }
@@ -162,12 +178,6 @@
 	100% {
 		background-position: 0% 50%;
 	}
-}
-
-.background {
-  background: $color-lightblue;
-  width: 100%;
-  height: 190vh;
 }
 
 .postContent {
